--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "swr": "^2.2.5"
   },
@@ -31,4 +33,3 @@
     "typescript": "^5"
   }
 }
-
