--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-select": "^5.8.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
