--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "moment-timezone": "^0.5.46",
     "next": "14.2.4",
     "react": "^18",
     "react-datepicker": "^7.3.0",
